# groundtruth

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  ENTRYPOINTS.md  FAQ.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  Makefile  README.md  ROADMAP.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  alembic.ini  groundtruth_test.db  pyproject.toml  requirements.txt
backend/.mypy_cache/3.14/: cache.0.db  cache.0.db-shm  cache.1.db  cache.1.db-shm  cache.1.db-wal  cache.10.db  cache.10.db-shm  cache.10.db-wal  cache.11.db  cache.11.db-shm  cache.12.db  cache.12.db-shm  cache.12.db-wal  cache.13.db  cache.13.db-shm  cache.13.db-wal  cache.14.db  cache.14.db-shm  cache.15.db  cache.15.db-shm  cache.15.db-wal  cache.2.db  cache.2.db-shm  cache.2.db-wal  cache.3.db  cache.3.db-shm  cache.3.db-wal  cache.4.db-shm  cache.4.db-wal  cache.5.db  cache.5.db-shm  cache.5.db-wal  cache.6.db  cache.6.db-shm  cache.6.db-wal  cache.7.db  cache.7.db-shm  cache.7.db-wal  cache.8.db  cache.8.db-shm  (+4 more)
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_api_keys.py  003_add_conversations_and_webhooks.py  004_add_workflow_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py  documents.py  health.py  keys.py  (+2 more)
backend/tests/: __init__.py  conftest.py  test_api.py  test_chunking.py  test_citation.py  test_embedding.py  test_forms.py  test_ingestion.py  test_parsers.py  test_refusal.py  test_retrieval.py  test_templates.py
(+125 files in other folders)
